Update .gitignore IPTS-17133/reduce.py IPTS-17133/reduce_symm.py IPTS-17133/strip_data.py processTOPAZ_IPTS-14787.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-*~
-*.nxs
-*.h5
-*.npy
+# Blacklist everything
+*
+# Whitelist .gitignore
+!.gitignore
+# Whitelist all directories
+!*/
+# Whitelist *.py
+!*.py
+!*.ipynb
+.ipynb_checkpoints/
